[package]
name = "javaver"
version = "0.2.0"
edition = "2021"
authors = ["Krazy Dev"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dialoguer = "0.11.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "winbase", "processenv"] }
winreg = "0.52.0"
